--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>  
 <html>  
     <header>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="table_style.css">
-        <title>My Webpage Title</title>
+        <title>Faezeh's Webpage Title</title>
     </header>
     <body>  
         <!---Navigation--->
@@ -11,10 +11,10 @@
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
                 <!--This code defines the "My Webpage" link in the top left corner of the navigation pane-->
-                <a class="navbar-brand" href="./index.html">My Webpage</a>
+                <a class="navbar-brand" href="./index.html" style="color:white;">My Webpage</a>
                 <!--This code defines the "List" link in the top right corner of the navigation pane-->
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./list.html">List</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./list.html" style="color:white;">List</a></li>
                 </ul>
             </div>
         </nav>
@@ -23,21 +23,24 @@
             <div class="container d-flex align-items-center flex-column">
                 
                 <!-- This code is for the student name-->
-                <h1 class="masthead-heading text-uppercase mb-0">Test Student</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">Faezeh Taghva</h1>
                 <!--This code creates the two lines separating the student name from the subtitle-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 <!--This code creates the subheading underneath the line dividers-->
-                <p class="masthead-subheading font-weight-light mb-0">School of Information Student</p>
+                <p class="masthead-subheading font-weight-light mb-0">UX Reasercher and Designer</p>
             </div>
+
         </header>
         <center>
             <br /><br />
             <div class="col-md-6 col-lg-4 mb-5">
                 <!-- put your bio paragraph here; remember to use the correct html tags -->
-                
+                <h3>About Me</h3>
+                <p>I am a 1st year master of information management and systems student at the UC Berkeley School of Information. <br> 
+                    I am interested in HCI and UX research & design</p>
             </div>
         </center>
     </body>
